[project]
name = "tvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "sdv>=1.32.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]
